@@ -1,6 +1,12 @@
 <?xml version="1.0"?>
 <tryton>
     <data>
+        <record model="ir.ui.view" id="journal_view_form">
+            <field name="model">account.journal</field>
+            <field name="inherit" ref="account.journal_view_form"/>
+            <field name="name">journal_form</field>
+        </record>
+
         <record model="ir.ui.view" id="move_snapshot_start_view_form">
             <field name="model">account.move.snapshot.start</field>
             <field name="type">form</field>
