@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="/form/notebook/page/field[@name='update_posted']" position="after">
+        <label name="aggregate"/>
+        <field name="aggregate"/>
+    </xpath>
+</data>
